# image-annealing

./: .gitignore  .taplo.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
image_annealing/: Cargo.toml  build.rs
image_annealing/src/: lib.rs
image_annealing/src/compute/: device.rs  dispatch.rs  mod.rs  system.rs
image_annealing/src/compute/dispatch/: mod.rs  tests.rs
image_annealing/src/compute/operation/: manager.rs  mod.rs
image_annealing/src/compute/output/: create_permutation.rs  format.rs  mod.rs  tests.rs  validate_permutation.rs
image_annealing/src/compute/resource/: manager.rs  mod.rs
image_annealing/src/compute/system/: mod.rs  tests.rs
image_annealing/src/gpu_prototype/: mod.rs
image_annealing/src/gpu_prototype/compute/: mod.rs
image_annealing/src/gpu_prototype/shader/: annealing.comp  image_test.comp
image_annealing/src/image_utils/: mod.rs  tests.rs
image_annealing/src/image_utils/dimension/: mod.rs  tests.rs
image_annealing/src/image_utils/displacement_goal/: mod.rs  tests.rs
image_annealing/src/image_utils/manipulation/: mod.rs  tests.rs
image_annealing/src/image_utils/rectangle/: mod.rs  tests.rs
image_annealing/src/image_utils/validation/: mod.rs  test_utils.rs  tests.rs
image_annealing/tests/: create_permutation.rs  create_permutations.rs  permute.rs  swap.rs  validate_permutation.rs  validate_permutations.rs
image_annealing/tests/create_displacement_goal/: main.rs
image_annealing/tests/create_displacement_goal/custom/: mod.rs  parameters.rs  pipeline_operation.rs
image_annealing/tests/create_displacement_goal/default/: mod.rs
image_annealing/tests/create_displacement_goal/error/: mod.rs
image_annealing/tests/create_displacement_goal/sequence/: mod.rs
image_annealing/tests/permute/: main.rs
image_annealing/tests/permute/error/: mod.rs
image_annealing/tests/permute/format/: mod.rs
image_annealing/tests/permute/pattern/: mod.rs
image_annealing/tests/permute/sequence/: mod.rs
image_annealing/tests/swap/: main.rs
image_annealing/tests/swap/border/: mod.rs
image_annealing/tests/swap/count/: mod.rs
image_annealing/tests/swap/error/: mod.rs
image_annealing/tests/swap/pattern/: horizontal_zero_offset.rs  mod.rs  varying_passes.rs
image_annealing/tests/swap/sequence/: mod.rs
image_annealing_cli/: Cargo.toml
image_annealing_cli/src/: lib.rs  main.rs
image_annealing_cli/src/arg/: mod.rs  tests.rs
image_annealing_cli/src/args/: mod.rs  tests.rs
image_annealing_cli/src/cli/: loader.rs  mod.rs  tests.rs
image_annealing_cli/src/cli/loader/: mod.rs
image_annealing_cli/src/cli/swap/: mod.rs  tests.rs
image_annealing_cli/src/config/: mod.rs  tests.rs
image_annealing_cli/src/config/data/: mod.rs  tests.rs
image_annealing_cli/src/config/dimension/: mod.rs
image_annealing_cli/src/config/filepath/: mod.rs
image_annealing_cli/src/config/input/: mod.rs
image_annealing_cli/src/config/io/: mod.rs  tests.rs
image_annealing_cli/src/env/: mod.rs  tests.rs
image_annealing_cli/tests/: create_displacement_goal.rs  create_permutation.rs  create_permutations.rs  permute.rs  swap.rs  validate_permutation.rs  validate_permutations.rs
image_annealing_cli_bin/: Cargo.toml
image_annealing_cli_bin/examples/dot/: README.md  main.rs  run.sh
image_annealing_cli_util/: Cargo.toml
image_annealing_cli_util/src/: lib.rs
image_annealing_cli_util/src/env/: mod.rs  tests.rs
image_annealing_cli_util/src/io/: mod.rs  tests.rs
image_annealing_cli_util/src/path/: mod.rs  tests.rs
image_annealing_cli_util/src/side_effect/: mod.rs
image_annealing_cli_util/src/text/: mod.rs  tests.rs
image_annealing_operation/: Cargo.toml
image_annealing_operation/src/: lib.rs
image_annealing_operation/src/adapter/: mod.rs  tests.rs
image_annealing_operation/src/instance/: mod.rs  tests.rs
image_annealing_operation/src/setting/: mod.rs  tests.rs
image_annealing_shader/: Cargo.toml
image_annealing_shader/src/: lib.rs  main.rs
image_annealing_shader/src/binding/: count_swap.rs  create_permutation.rs  permute.rs  swap.rs
image_annealing_shader/src/compute/: mod.rs
image_annealing_shader/src/constant/: mod.rs
image_annealing_shader/src/function/: mod.rs
image_annealing_shader/src/global/: mod.rs
image_annealing_shader/src/resource/: buffer.rs  mod.rs  texture.rs  uniform.rs
image_annealing_shader/src/shader/: mod.rs
image_annealing_shader/src/type_definitions/: mod.rs
image_annealing_shader/src/validate/: mod.rs  tests.rs
image_annealing_shader/tests/: validate_shaders.rs
image_annealing_shader_cli/: Cargo.toml
image_annealing_shader_cli/src/: lib.rs  main.rs
image_annealing_shader_cli/src/args/: mod.rs  tests.rs
image_annealing_shader_cli/src/cli/: mod.rs  tests.rs
image_annealing_shader_cli/src/config/: mod.rs  tests.rs
image_annealing_shader_cli/src/output/: mod.rs  tests.rs
image_annealing_shader_cli/tests/: cli_run.rs
image_annealing_shaders/: Cargo.toml
image_annealing_shaders/src/: lib.rs  main.rs
image_annealing_shaders/src/binding/: create_displacement_goal.rs  mod.rs  swap.rs
image_annealing_shaders/src/compute/: mod.rs  workgroup.rs
image_annealing_shaders/src/constant/: count_swap.rs  mod.rs  swap.rs
image_annealing_shaders/src/function/: mod.rs
image_annealing_shaders/src/global/: mod.rs
image_annealing_shaders/src/output/: mod.rs  tests.rs
image_annealing_shaders/src/resource/: buffer.rs  texture.rs  uniform.rs
image_annealing_shaders/src/shader/: mod.rs
image_annealing_shaders/src/type_definitions/: buffer.rs  mod.rs  uniform.rs
image_annealing_shaders/tests/: validate_shaders.rs
src/: lib.rs  (+1 more)
test_util/: Cargo.toml
test_util/src/: lib.rs
test_util/src/algorithm/: mod.rs
test_util/src/error/: mod.rs  tests.rs
test_util/src/image/: mod.rs
test_util/src/mock/: mod.rs
test_util/src/operation/: mod.rs
test_util/src/path/: mod.rs
test_util/src/permutation/: mod.rs
test_util/src/repository/: mod.rs  tests.rs
test_util/src/shader/: mod.rs
test_util/src/side_effect/: mod.rs
test_util/tests/: base_paths.rs
(+216 files in other folders)
