[package]
name = "image_annealing"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2018"
description = "Approximate optimization algorithms applied to images"
keywords = ["image","graphics"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4"
futures = "0.3"
image = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.5"
shaderc = "0.7"