[package]
name = "image_annealing"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Approximate optimization algorithms applied to images"
keywords = ["image","graphics"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.56"
bitflags = "1.3.2"
bytemuck = { version = "1.10.0", features = [ "derive" ] }
futures = "0.3.21"
futures-intrusive = "0.4.0"
image = "0.24.2"
image_annealing_shaders = { path = "../image_annealing_shaders" }
parking_lot = "0.12.1"
wgpu = "0.13.1"

[build-dependencies]
image_annealing_shaders = { path = "../image_annealing_shaders" }

[dev-dependencies]
test_utils = { path = "../test_utils" }