[package]
name = "image_annealing"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Approximate optimization algorithms applied to images"
keywords = ["image","graphics"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.58"
bitflags = "1.3.2"
bytemuck = { version = "1.12.3", features = [ "derive" ] }
futures = "0.3.25"
futures-intrusive = "0.5.0"
image = "0.24.5"
image_annealing_shader = { path = "../image_annealing_shader" }
parking_lot = "0.12.1"
wgpu = "0.14.0"

[build-dependencies]
image_annealing_shader = { path = "../image_annealing_shader" }

[dev-dependencies]
test_utils = { path = "../test_utils" }