[package]
name = "image_annealing_cli"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Command-line utilities library for the image_annealing crate"
keywords = ["image","graphics","cli"]
license = "MIT OR Apache-2.0"

[dependencies]
bpaf = { version = "0.7.7", features = ["autocomplete", "derive"] }
futures = "0.3.25"
futures-intrusive = "0.5.0"
image_annealing = { path = "../image_annealing" }
image_annealing_cli_util = { path = "../image_annealing_cli_util" }
image_annealing_shader = { path = "../image_annealing_shader" }
image_annealing_shader_cli = { path = "../image_annealing_shader_cli" }
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
async-trait = "0.1.60"
test_util = { path = "../test_util" }