[package]
name = "image_annealing_cli_util"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Common utilities library for command-line programs for the image_annealing crates"
keywords = ["image","graphics","cli"]
license = "MIT OR Apache-2.0"

[dependencies]
relative-path = { version = "1.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
test_util = { path = "../test_util" }