[package]
name = "image_annealing_shader_cli"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Command-line programs for the image_annealing_shader crate"
keywords = ["image","graphics"]
license = "MIT OR Apache-2.0"

[dependencies]
bpaf = { version = "0.7.7", features = ["autocomplete", "derive"] }
image_annealing_shader = { path = "../image_annealing_shader" }

[dev-dependencies]
test_utils = { path = "../test_utils" }