[package]
name = "image_annealing_shader_cli"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Command-line programs for the image_annealing_shader crate"
keywords = ["image","graphics"]
license = "MIT OR Apache-2.0"

[dependencies]
bpaf = { version = "0.7.7", features = ["autocomplete", "derive"] }
codespan-reporting = "0.11.1"
image_annealing_cli_util = { path = "../image_annealing_cli_util" }
image_annealing_shader = { path = "../image_annealing_shader" }
naga = { version = "0.10.0", features = ["span", "validate", "wgsl-in"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
test_util = { path = "../test_util" }