[package]
name = "image_annealing_shaders"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Shaders for the image_annealing crate"
keywords = ["image","graphics"]
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
naga = { version = "0.9.0", features = ["validate", "wgsl-in"] }
test_utils = { path = "../test_utils" }