[package]
name = "test_util"
version = "0.1.0"
authors = ["Bernard Llanos"]
edition = "2021"
description = "Test helper utilities for the workspace"
license = "MIT OR Apache-2.0"

[dependencies]
image = "0.24.5"
image_annealing = { path = "../image_annealing" }
image_annealing_cli_util = { path = "../image_annealing_cli_util" }
image_annealing_shader = { path = "../image_annealing_shader" }
relative-path = "1.8.0"